--- a/ViewModelTutor/ViewModelTutor.csproj
+++ b/ViewModelTutor/ViewModelTutor.csproj
@@ -5,10 +5,16 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="logo.ico" />
+  </ItemGroup>
+	 
+  <ItemGroup>
     <Folder Include="ViewModel\" />
+	   
   </ItemGroup>
 
   <ItemGroup>
