--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-beta.90" />
+		<PackageReference Include="WindowsInput" Version="6.3.0" />
 	</ItemGroup>
   <ItemGroup>
     <Content Include="Applications.ico" />
