--- a/Vmmaker/Vmmaker.csproj
+++ b/Vmmaker/Vmmaker.csproj
@@ -13,9 +13,12 @@
 		<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
 		<PackageReference Include="SharpZipLib" Version="1.3.3" />
 	</ItemGroup>
-	<ItemGroup >
+	<ItemGroup>
 		<Content Include="res\*.*">
 			<CopyToOutputDirectory>always</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="res\" />
 	</ItemGroup>
 </Project>
