--- a/Vmmaker/Vmmaker.csproj
+++ b/Vmmaker/Vmmaker.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
 		<PackageReference Include="HandyControl" Version="3.3.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
 		<PackageReference Include="SharpZipLib" Version="1.3.3" />
 	</ItemGroup>
