--- a/WpfTmp/WpfTmp.csproj
+++ b/WpfTmp/WpfTmp.csproj
@@ -17,6 +17,7 @@
     </Content>
   </ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
 		<PackageReference Include="SharpZipLib" Version="1.3.3" />
 	</ItemGroup>
 
